--- a/assets/SASS/style.scss
+++ b/assets/SASS/style.scss
@@ -1,6 +1,3 @@
-// Importing Partials //
-
-
 // Fonts used //
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400');
@@ -28,8 +25,16 @@
 $background_color : #f5f5f5;
 $heading_color : #ead7d7;
 $heading_size : 7rem;
+$break_xsmall : 380px;
+$break_small : 415px;
+$break_medium : 780px;
+$break_large : 1025px;
 
 // Style //
+
+* {
+    box-sizing: border-box;
+}
 
 body {
     height: 100vh; 
@@ -52,6 +57,7 @@ a:hover {
 
 #form {
     @include shadow();
+    width: 40%;
 }
 
 .heading {
@@ -63,12 +69,16 @@ a:hover {
 }
     
 #input {
-    width: 30rem;
+    width: 100%;
     padding: 1rem 3rem;
     @include mainFont(400);
     font-size: 1.3rem;
     border: 1px solid rgba(0, 0, 0, 0.397); 
 } 
+
+#input:focus {
+    outline: none;
+}
 
 .task_list {
     margin: 0;
@@ -94,6 +104,8 @@ a:hover {
 
 .strikethrough {
     text-decoration: line-through;
+    background: rgb(224, 224, 224);
+    transition: all 0.25s ease-in-out;
 }
 
 .filters {
@@ -104,3 +116,6 @@ a:hover {
     @include mainFont(400);
 }
 
+// Importing Partials //
+
+@import 'mediaqueries';
