--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -58,15 +58,15 @@ a:hover {
   border-bottom: 1px solid rgba(0, 0, 0, 0.397);
   border-left: 1px solid rgba(0, 0, 0, 0.397);
   font-size: 1.3rem;
-  padding: 1rem 3rem; }
+  padding: 1rem 3rem;
+  transition: all 0.25s ease-in-out; }
 
 .task:hover {
   cursor: pointer; }
 
 .strikethrough {
   text-decoration: line-through;
-  background: #e0e0e0;
-  transition: all 0.25s ease-in-out; }
+  background: #e0e0e0; }
 
 .filters {
   background-color: #ead7d7;
